<resources>
    <string name="app_name">InventUrStock</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account">Do Not Have An Account?</string>
    <string name="register_here">register here</string>
    <string name="return_to_login">return to login</string>
    <string name="signed_in_already">Signed In Already?</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="check">check</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="splash">splash</string>
    <string name="view_profile">View Profile</string>
    <string name="view_all_items">View All Items</string>
    <string name="add_new_items">Add New Items</string>
    <string name="product_name">Product Name</string>
    <string name="barcode">Barcode</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add_new_item">Add New Item</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address:</string>
    <string name="username">Username:</string>
    <string name="Password">Password:</string>
    <string name="change_password">Change Password</string>
    <string name="return_to_profile">Return to Profile</string>
    <string name="original_password">Original Password:</string>
    <string name="search_database">Search Database</string>
    <string name="inventurstock">InventUrStock</string>
    <string name="delete_account">Delete Account</string>
    <string name="registration">Registration</string>
    <string name="forgoturpassword">ForgotUrPassword?</string>
    <string name="changeurpassword">ChangeUrPassword</string>
    <string name="displayurstock">DisplayUrStock</string>
    <string name="displayurprofile">DisplayUrProfile</string>
    <string name="addurstock">AddUrStock</string>
    <string name="splashbg">splashbg</string>
    <string name="ur_inventory">Ur Inventory</string>
    <string name="store_inventory_of_your_essentials_in_our_secure_database">Store inventory of your essentials in our secure database!</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="file">file</string>
    <string name="tab1">tab1</string>
    <string name="friendly">Friendly</string>
    <string name="our_app_provides_user_satisfaction_with_a_simplistic_look">Our app provides user satisfaction with a simplistic look!</string>
    <string name="user">User</string>
    <string name="tab2">tab2</string>
    <string name="splashuser">user</string>
    <string name="inventory_accessed_by_ur_account">Inventory accessed by Ur account!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_today">Login Today!</string>
    <string name="splashemail">splashemail</string>
    <string name="tab3">tab3</string>
    <string name="editurstock">EditUrStock</string>
    <string name="exit_edit_mode">exit edit mode</string>
    <string name="already_registered">Already Registered?</string>
</resources>