<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#474646"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/registerbg"
        android:layout_width="match_parent"
        android:layout_height="585dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/white_corners_30dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titledisplay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <EditText
        android:id="@+id/signname"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/darktexttab"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerbg"
        app:layout_constraintTop_toTopOf="@+id/registerbg" />

    <EditText
        android:id="@+id/signemail"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/darktexttab"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerbg"
        app:layout_constraintTop_toBottomOf="@+id/signname" />

    <EditText
        android:id="@+id/signpassword"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/darktexttab"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signemail" />

    <EditText
        android:id="@+id/signpasswordcheck"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/darktexttab"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signpassword" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/black_outline"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#474646"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signpasswordcheck" />

    <TextView
        android:id="@+id/sign_tv"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="558dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/already_registered"
        android:textColor="#474646"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signbutton"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/black_outline"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#474646"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>