<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddItems">

    <TextView
        android:id="@+id/additemsbg"
        android:layout_width="match_parent"
        android:layout_height="574dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/black_corners_30dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titledisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/addurstock"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/additemsbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <Button
        android:id="@+id/returntomenu"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/whiteoutline_nofill"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/return_to_menu"
        android:textColor="#C9FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/categoryadditem"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/lighttexttab"
        android:drawableStart="@drawable/ic_action_category"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/category"
        android:textColor="#474646"
        android:textColorHint="#474646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productnameadditem" />

    <EditText
        android:id="@+id/barcodeadditem"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/lighttexttab"
        android:drawableStart="@drawable/ic_action_barcode"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        android:hint="@string/barcode"
        android:textColor="#474646"
        android:textColorHint="#474646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/additemsbg" />

    <EditText
        android:id="@+id/productnameadditem"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/lighttexttab"
        android:drawableStart="@drawable/ic_action_product_name"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/product_name"
        android:textColor="#474646"
        android:textColorHint="#474646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeadditem" />

    <Button
        android:id="@+id/additembutton"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/whiteoutline_nofill"
        android:gravity="center"
        android:onClick="process"
        android:text="@string/add_new_item"
        android:textColor="#C9FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <EditText
        android:id="@+id/priceadditem"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/lighttexttab"
        android:drawableStart="@drawable/ic_action_price"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/price"
        android:textColor="#474646"
        android:textColorHint="#474646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryadditem" />
</androidx.constraintlayout.widget.ConstraintLayout>