<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InventoryPage">

    <TextView
        android:id="@+id/inventorybg"
        android:layout_width="match_parent"
        android:layout_height="585dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/black_corners_30dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titledisplay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/inventurstock"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inventorybg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"  />

    <Button
        android:id="@+id/additemsbutton_ip"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/whiteoutline_nofill"
        android:text="@string/add_new_items"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilebutton" />

    <Button
        android:id="@+id/profilebutton"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/whiteoutline_nofill"
        android:gravity="center"
        android:text="@string/view_profile"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <Button
        android:id="@+id/viewitemsbutton"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/whiteoutline_nofill"
        android:text="@string/view_all_items"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additemsbutton_ip" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="347dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inventorybg"
        app:layout_constraintTop_toTopOf="@+id/inventorybg" />

</androidx.constraintlayout.widget.ConstraintLayout>